@@ -138,12 +138,12 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.7.0</version>
                 <configuration>
-                    <source>1.9</source>
-                    <target>1.9</target>
-                    <compilerArgs>
-                        <arg>--add-modules</arg>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <!--<compilerArgs>
+                        <arg>&#45;&#45;add-modules</arg>
                         <arg>java.xml.ws.annotation</arg>
-                    </compilerArgs>
+                    </compilerArgs>-->
                 </configuration>
             </plugin>
 
